--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Do You Remember?</title>
+    <img src="./img.jpg" alt="Welcome">
+
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/App.tsx"></script>
   </body>
 </html>
